# gtkmm_openGL

./: CMakeLists.txt  README.md  glwindow.cpp  glwindow.hpp  glwindowmain.cpp
use builder + glade/: kinect.glade  kinect2.glade  main_kinect.cc  mainwindow.cpp  mainwindow.hpp  your GUI design
